// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCropper should match snapshots with multiple conditions 1`] = `
<Fragment>
  <div
    className="react-image-crop-global-styles image-cropper-outer"
  >
    <div
      className="image-cropper-inner"
    >
      <div
        className="image-cropper-content"
      >
        <div
          className="image-cropper-crop-panel-wrapper"
        >
          <H5
            isCentered={true}
          >
            Crop Image
          </H5>
          <l
            circularCrop={false}
            className="image-cropper-crop-panel"
            crop={
              Object {
                "aspect": 1.7777777777777777,
                "height": undefined,
                "unit": "%",
                "width": 50,
              }
            }
            disabled={false}
            imageAlt=""
            keepSelection={false}
            locked={false}
            minHeight={0}
            minWidth={0}
            onChange={[Function]}
            onComplete={[Function]}
            onDragEnd={[Function]}
            onDragStart={[Function]}
            onImageError={[Function]}
            onImageLoaded={[Function]}
            ruleOfThirds={true}
            src=""
          />
        </div>
        <div
          className="image-cropper-preview-wrapper"
        >
          <H5
            isCentered={true}
          >
            Preview
          </H5>
        </div>
      </div>
      <div
        className="image-cropper-action-wrapper"
      >
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="secondary"
        >
          Cancel
        </Button>
        <Button
          disabled={true}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Crop
        </Button>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`ImageCropper should match snapshots with multiple conditions 2`] = `
<Fragment>
  <div>
    <div
      afterLoadedImage={[Function]}
      croppedImage=""
      key=".0"
    >
      value
    </div>
  </div>
</Fragment>
`;

exports[`ImageCropperWithInput should match snapshots with multiple conditions 1`] = `
<ImageCropper
  aspect={1.7777777777777777}
  croppedImage={null}
  onClose={[Function]}
  onCropClick={[Function]}
  setCroppedImage={[Function]}
  setUpImg={[Function]}
  setVisible={[Function]}
  upImg=""
  visible={false}
>
  <ImageInput
    labelText="input image"
    name="inputImage"
  />
</ImageCropper>
`;

exports[`ImageCropperWithInput should match snapshots with multiple conditions 2`] = `
<ImageCropper
  croppedImage={null}
  onClose={[Function]}
  onCropClick={[Function]}
  setCroppedImage={[Function]}
  setUpImg={[Function]}
  setVisible={[Function]}
  upImg=""
  visible={false}
>
  <ImageInput
    labelText="input image"
    name="inputImage"
  />
</ImageCropper>
`;

exports[`renderChildrenWithProps should match snapshots with multiple conditions 1`] = `
<div>
  <div>
    <div
      key=".$1"
      value="value"
    >
      1
    </div>
    <div
      key=".$2"
      value="value"
    >
      2
    </div>
  </div>
</div>
`;

exports[`renderChildrenWithProps should match snapshots with multiple conditions 2`] = `<div />`;
